--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -154,3 +154,42 @@ body {
     }
   }
 }
+
+@media screen and (max-width: 400px){
+  .hero-header {
+    height: 250px;
+    .main-text {
+      letter-spacing: 3px;
+      font-size: 35px;
+      margin-bottom: 10px;
+    }
+    .sub-text {
+      font-size: 15px;
+      letter-spacing: 2px;
+      font-weight: lighter;
+    }
+  }
+  .para-one {
+    text-align: center;
+      width: 100%;
+  }
+  .para-two {
+    text-align: center;
+    width: 100%;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    /*background-color: #f9f9f9;*/
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .active:hover .dropdown-content {
+      display: block;
+  }
+}
+
