--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,10 @@
 <nav class="menu">
   <ul class="active">
     <li class="current-item"><%= link_to "Home", root_url %></li>
+    <div class="dropdown-content">
     <li><%= link_to "Login", "#" %></li>
     <li><%= link_to "Signup", "#" %></li>
     <li><%= link_to "About Us", "#" %></li>
+    </div>
   </ul>
 </nav>
